using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class StringStore
{
    public const string horizontal = "Horizontal";
    public const string jump = "Jump";

    public const string hit = "hit";
    public const string die = "die";
    public const string respawn = "respawn";


    public const string diamond = "Diamond";
    public const string collected = "collected";


}
